--- a/components/package.json
+++ b/components/package.json
@@ -6,15 +6,17 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "format:fix": "npx prettier --write .",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "pre-commit": "lint-staged",
+    "prepare": "cd .. && husky install components/.husky",
     "preview": "vite preview",
-    "test": "vitest",
-    "precommit": "npm run lint && npm test",
-    "format:fix": "prettier . --write",
-    "prepare": "cd .. && husky install .husky"
+    "test": "vitest"
   },
   "lint-staged": {
-    "*.{ts,tsx}": "eslint --fix"
+    "*.{ts,tsx}": [
+      "npm run lint"
+    ]
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -32,6 +34,7 @@
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^5.0.1",
@@ -41,6 +44,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^15.0.2",
     "npm": "^10.2.1",
+    "prettier": "3.0.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vitest": "^0.34.6"
